# phi

./: .LICENCE.txt.swp  .gitignore  CMakeLists.txt  LICENCE.txt  Makefile  README.md  barrier.h  blas_wrapper.cc  blas_wrapper.h  cubic_spline.cc  hierarchy.cc  hierarchy.h  hierarchy_integrator.cc  hierarchy_integrator.h  hierarchy_integrator_test.cc  hierarchy_updater.cc  lapack_wrapper.h  numeric_types.h  phi.cc  phi_parameters.cc  phi_parameters.h  restart_helper.h  timer.h  timer_test.cc
example/: one_qubit.prm  one_qubit_100.txt
src/: .complex_matrix.cc.swp  .cubic_spline.cc.swp  .hierarchy_integrator.cc.swp  .hierarchy_integrator_node.h.swp  .hierarchy_node.h.swp  .lapack_wrapper.h.swp  .phi_parameters.cc.swp  barrier.cc  blas_wrapper.h  complex_matrix.cc  complex_matrix.h  cubic_spline.cc  cubic_spline.h  hierarchy_integrator.cc  hierarchy_node.cc  hierarchy_node.h  hierarchy_updater.h  hilbert_space_truncator.cc  hilbert_space_truncator.h  hilbert_space_truncator_test.cc  lapack_wrapper.h  parameter_input.cc  parameter_input.h  phi.cc  phi_parameters.cc  restart_helper.cc  timer.cc
utils/: phi_output_reader.py
